<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Serval</string>
    <string name="service_input_label">Add or Remove ServiceID</string>
    <string name="add_service_button">Add</string>
    <string name="remove_service_button">Remove</string>
    <string name="label_ip">IP: </string>
    <string name="translator_label">Translator status:</string>
    <string name="translator_service_started">Serval translator started</string>
    <string name="translator_service_label">Serval translator</string>
    <string name="http_label">Translate HTTP/HTTPS:</string>
    <string name="trans_all_label">Translate ALL TCP traffic:</string>
    <string name="iperf_label">Run iperf: </string>
    <string-array name="pager_titles">
        <item>Flow Table</item>
        <item>Service Table</item>
        <item >General</item>
        <item >Translator</item>
    </string-array>
    <string name="module_loaded">Module: &lt;b>LOADED&lt;/b></string>
    <string name="module_unloaded">Module: &lt;b>UNLOADED&lt;/b></string>
    <string name="udp_on">UDP Encap: &lt;b>ON&lt;/b></string>
    <string name="udp_off">UDP Encap: &lt;b>OFF&lt;/b></string>
    <string name="translator_running">Translator: &lt;b>RUNNING&lt;/b></string>
    <string name="translator_off">Translator: &lt;b>OFF&lt;/b></string>
    <string name="label_service_id">ServiceID: </string>
    <string name="label_persists">Persists: </string>
    <string name="no_service_table">No service table found.</string>
    <string name="no_flow_table">No flow table found.</string>
    <string name="no_dummy">Your phone has no dummy interface and a kernel module was not supplied or it did not install. The translator will not work.</string>
    <string-array name="service_rule_types">
        <item >FORWARD</item>
        <item >DELAY</item>
        <item >DROP</item>
    </string-array>
    <string name="label_rule_type">Type:</string>
    <string name="inet_hijack">Hijack AF_INET sockets:</string>
    <string name="auto_migration_label">Automatic migration:</string>
    <string name="toggle_auto_migration">Auto migration</string>
    <string name="default_service_id">0x00005</string>
    <string name="default_service_type">FWD</string>
    <string name="default_address">128.112.7.146</string>
    <string name="service_table_resolved_label">Resolved:</string>
    <string name="service_table_resolved_default">0</string>
</resources>
