<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left|right"
        android:padding="8dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/layout_trans_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ToggleButton
                android:id="@+id/translatorToggle"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="30dp"
                android:textOff="Off"
                android:textOn="Running" />

            <TextView
                android:id="@+id/label_trans_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/translatorToggle"
                android:text="@string/translator_label"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="15dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_trans_http"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ToggleButton
                android:id="@+id/toggle_trans_http"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="30dp"
                android:checked="true"
                android:textOff="No"
                android:textOn="Yes" />

            <TextView
                android:id="@+id/label_trans_http"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/toggle_trans_http"
                android:text="@string/http_label"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="15dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_trans_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ToggleButton
                android:id="@+id/toggle_trans_all"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="30dp"
                android:textOff="No"
                android:textOn="Yes" />

            <TextView
                android:id="@+id/label_trans_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/toggle_trans_all"
                android:text="@string/trans_all_label"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="15dp" />
        </RelativeLayout>
	</LinearLayout>

</ScrollView>